# tango-calendar

./: .gitignore  README.md  manage.py  pyproject.toml
api/: admin.py  models.py  serializers.py  tests.py  validators.py  views.py
api/migrations/: 0001_initial.py  0002_location_meeting.py
tango_calendar/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
